2019-1/221/users/4121/executions/1653_2447.log
== TEST (2019-04-15 18:00:18) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta",(round(x-y,2)))
if(x < y):
	print("Troco",(round(y-x,2)))
	
	
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:00:46) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta",(round(x-y,2)))
if(x < y):
	print("Troco",(round(y-x,2)))
	
	
-- EXECUTION TIME:
0.168496
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:01:47) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta",(round(x-y,2)))
if(x < y):
	print("Troco",(round(y-x,2)))
	
	
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:02:26) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta",(round(x-y,2)))
if(x < y):
	print("Troco de",(round(y-x,2)))
	
	
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:02:35) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta",(round(x-y,2)))
if(x < y):
	print("Troco de",(round(y-x,2)))
	
	
-- EXECUTION TIME:
0.142665
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:03:16) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta x",(round(x-y,2)))
if(x < y):
	print("Troco de",(round(y-x,2)))
	
	
-- OUTPUT:
Falta x 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:03:25) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta x",(round(x-y,2)))
if(x < y):
	print("Troco de",(round(y-x,2)))
	
	
-- EXECUTION TIME:
0.182298
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta x 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:03:33) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta X",(round(x-y,2)))
if(x < y):
	print("Troco de",(round(y-x,2)))
	
	
-- OUTPUT:
Falta X 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:03:40) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta X",(round(x-y,2)))
if(x < y):
	print("Troco de",(round(y-x,2)))
	
	
-- EXECUTION TIME:
0.144188
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta X 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:04:02) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta",(round(x-y,2)))
if(x < y):
	print("Troco de",(round(y-x,2)))
	
	
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:04:23) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta",(round(x-y,2)))
if(x < y):
	print("Troco de",(round(y-x,2)))
	
	
-- EXECUTION TIME:
0.278368
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:04:56) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta",(round(x-y,2)))
else
	print("Troco de",(round(y-x,2)))
	
	
-- EXECUTION TIME:
0.209833
-- ERROR:
  File "/home/codebench/codes/1653/2447/main.py", line 5
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:05:00) 
-- CODE:
x = float(input("Preco: "))
y = float(input("Pagamento: "))
if (x > y):
	print("Falta",(round(x-y,2)))
else:
	print("Troco de",(round(y-x,2)))
	
	
-- EXECUTION TIME:
0.196535
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
